<resources>
    <string name="app_name">Halimah</string>
    <string name="map_key">AIzaSyAdzZoZ_JFIF689D_vWJtx5Ln2TbQtcMrs</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="notification">Notifications</string>
    <string name="ok">Ok</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password ?</string>
    <string name="sign_in">Sign In</string>
    <string name="member_sign_up">Member Sign Up</string>
    <string name="nursery_sign_up">Nursery Sign Up</string>
    <string name="skip">Skip</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="sign_up">Sign Up</string>
    <string name="nursery_name">Nursery name</string>
    <string name="nursery_phone">Nursery phone</string>
    <string name="nursery_officer_name">Nursery officer name</string>
    <string name="nursery_officer_phone">Nursery officer phone</string>
    <string name="address">Address</string>
    <string name="choose_services">Choose Services</string>
    <string name="username_req">username is required</string>
    <string name="password_req">Password is required</string>
    <string name="signing_in">signing in...</string>
    <string name="app_open_gps">App will open gps reservation_to_hour fetch your location.</string>
    <string name="acc_loc_denied">Access location Permission denied</string>
    <string name="name_req">Name is required</string>
    <string name="phone_req">Phone is required</string>
    <string name="inv_phone">Invalid phone number</string>
    <string name="something">Error : something went haywire try again later</string>
    <string name="acc_photo_denied">Access photo permission denied</string>
    <string name="address_req">Address is required</string>
    <string name="ch_service">Choose nursery service</string>
    <string name="ch_profile_photo">Choose profile photo</string>
    <string name="sinng_up">Signing Up...</string>
    <string name="send">Send</string>
    <string name="email_address">Email address</string>
    <string name="recover_password">Recover Password</string>
    <string name="recov_msg">Recover your account.We will send you new password</string>
    <string name="sending">Sending...</string>
    <string name="email_req">Email is required</string>
    <string name="inv_email">Invalid email</string>
    <string name="hour_cost">Hour cost</string>
    <string name="hour_cost_req">Hour cost is required</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="my_reservations">My Reservations</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="contact_us">Contact us</string>
    <string name="logout">Logout</string>
    <string name="message">Message</string>
    <string name="msg_req">Message is required</string>
    <string name="si_su">Please sign in or sign up.</string>
    <string name="there_are_no_notifications_to_display">There are no notifications to display</string>
    <string name="wait">Wait...</string>
    <string name="link_inc">This link is incorrect</string>
    <string name="un_exist">user name is exist</string>
    <string name="reservation_from_hour">From</string>
    <string name="reservation_to_hour">To</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="field_req">This field is required</string>
    <string name="loggng_out">Logging out...</string>
    <string name="sar_hour">SAR for hour</string>
    <string name="km">Km</string>
    <string name="choose_date">Choose date</string>
    <string name="hours">Hours</string>
    <string name="hours_9">9 Hours</string>
    <string name="book">Book</string>
    <string name="serv">Services</string>
    <string name="reservs">Reservation</string>
    <string name="loc">Location</string>
    <string name="select_location">Select Nursery Location</string>
    <string name="loc_nurs_press">To determined nursery location Click on its location on map</string>
    <string name="add">Add</string>
    <string name="date_sel">This date has already selected</string>
    <string name="accept">Accept</string>
    <string name="serve_avail">This service is available to clients only</string>
    <string name="booking">Booking...</string>
    <string name="succ">Success</string>
    <string name="details">Details</string>
    <string name="reservation_date">Reservation date</string>
    <string name="cost">Hours cost</string>
    <string name="refuse">Refuse</string>
    <string name="payment">Payment</string>
    <string name="state">State</string>
    <string name="date_approved">Date approved</string>
    <string name="date_declined">Date declined</string>
    <string name="reservation_cost">Reservation cost</string>
    <string name="sar">SAR</string>
    <string name="reserv_decline">Sorry,Your reservation declined.</string>
    <string name="trans_declined">Payment transfer declined</string>
    <string name="reserve_cancel">Sorry,Reservation canceled</string>
    <string name="day_not_aval">this day not available</string>
    <string name="confirm">Confirm</string>
    <string name="reserve_charge">Your reservation charged ,Please confirm  reservation.</string>
    <string name="delete">Delete</string>
    <string name="date_old">Reservation date is out of date</string>
    <string name="out_of_date">Out of date</string>
    <string name="transfer_amount">Transfer amount</string>
    <string name="transfer_photo">Transfer photo</string>
    <string name="upload_photo">Upload photo</string>
    <string name="ch_trans_photo">Choose Transfer photo</string>
    <string name="ch_img_perm_denied">Permission denied</string>
    <string name="there_are_no_reservations_to_display">There are no reservations to display</string>
    <string name="new_reservation">New</string>
    <string name="current_reservation">Current</string>
    <string name="phone">Phone</string>
    <string name="update">Update</string>
    <string name="upd_name">Update name</string>
    <string name="upd_phone">Update phone</string>
    <string name="upd_email">Update email</string>
    <string name="upd_username">Update username</string>
    <string name="upd_password">Update password</string>
    <string name="old_pass">Old password</string>
    <string name="newpass_req">New password required</string>
    <string name="wrong_oldpass">Incorrect old password</string>
    <string name="updtng">Updating...</string>
    <string name="photos">Photos</string>
    <string name="cnt_del_serv">Cannot delete service ,the nursery must have one service at least</string>
    <string name="deltng">Deleting...</string>
    <string name="new_password">New password</string>
    <string name="max5">Maximum gallery photos is 5</string>
    <string name="ch_serv">Choose service</string>
    <string name="no_servs">There are no services to display</string>
    <string name="there_are_no_nurseries_to_display">There are no nurseries to display</string>
    <string name="reservation">Reservation</string>
    <string name="reservation_accepted">Reservation approved</string>
    <string name="reservation_refused">Reservation refused</string>
    <string name="reservation_confirmed">Reservation confirmed</string>
    <string name="reservation_canceled">Reservation canceled</string>
    <string name="reservation_money_transferred">Reservation Cost transferred</string>
    <string name="reservation_money_refused">Reservation Cost refused</string>
    <string name="cost_ransfer_confirmed">Cost transfer confirmed</string>
    <string name="inv_username">Username must be (a-z char and number 0123456789)</string>


</resources>
