<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <TextView
        android:id="@+id/tv_choose_date"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:text="@string/choose_date"
        android:textAllCaps="true"
        android:gravity="center"
        android:textStyle="bold"
        android:background="@drawable/btn_ch_date"
        android:singleLine="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:weightSum="4"
        android:layout_marginTop="8dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/hours"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_gravity="top"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal"
                >
                <LinearLayout
                    android:id="@+id/ll_from"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="27dp"
                    android:orientation="horizontal"
                    android:background="@drawable/ll_from_to_bg"
                    android:layout_marginEnd="3dp"
                    tools:ignore="RtlCompat">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/down_arrow"
                        android:padding="6dp"
                        android:clickable="false"
                        android:longClickable="false"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:clickable="false"
                        android:longClickable="false"
                        android:text="@string/reservation_from_hour"
                        android:textColor="@color/black"
                        android:textSize="13sp" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_to"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="27dp"
                    android:orientation="horizontal"
                    android:background="@drawable/ll_from_to_bg"
                    android:layout_marginStart="2dp"
                    tools:ignore="RtlCompat">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/down_arrow"
                        android:padding="6dp"
                        android:clickable="false"
                        android:longClickable="false"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:text="@string/reservation_to_hour"
                        android:clickable="false"
                        android:longClickable="false"
                        />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                >
                <TextView
                    android:id="@+id/tv_from"
                    android:layout_width="0dp"
                    android:layout_height="27dp"
                    android:layout_weight=".5"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:hint="00:00"
                    android:textColorHint="@color/text_color"
                    android:background="@drawable/ll_from_to_bg"
                    android:gravity="center"
                    android:layout_marginEnd="3dp"
                    tools:ignore="RtlCompat" />
                <TextView
                    android:id="@+id/tv_to"
                    android:layout_width="0dp"
                    android:layout_height="27dp"
                    android:layout_weight=".5"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:hint="00:00"
                    android:textColorHint="@color/text_color"
                    android:background="@drawable/ll_from_to_bg"
                    android:gravity="center"
                    android:layout_marginStart="2dp"
                    tools:ignore="RtlCompat"

                    />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/hours_9"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_gravity="top"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:background="@drawable/btn_bg"
        android:text="@string/add"

        />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        >

    </android.support.v7.widget.RecyclerView>

    <Button
        android:id="@+id/btn_book"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:background="@drawable/btn_bg"
        android:text="@string/book"
        android:visibility="invisible"

        />
</LinearLayout>
</ScrollView>