<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.sign_in_activity.SignInActivity"
    android:orientation="vertical"
    android:background="@drawable/login_bg"

    >
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/toolbar_bg"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >
            <ImageView
                android:id="@+id/image_back"
                android:layout_width="56dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                tools:ignore="RtlCompat"
                android:src="@drawable/back_arrow"
                android:padding="17dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:text="@string/sign_in"
                android:textStyle="bold"
                />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:fillViewport="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            >
            <ImageView
                android:layout_width="220dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:src="@drawable/logo"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:background="@drawable/edt_sign_bg"

                >
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/user_icon"
                    android:padding="8dp"
                    />
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="false"
                    app:passwordToggleTint="@color/colorPrimary"
                    app:hintAnimationEnabled="false"
                    app:counterEnabled="false"
                    app:errorEnabled="false"


                    >
                    <EditText
                        android:id="@+id/edt_username"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/edt_sign_bg"
                        android:inputType="text"
                        android:singleLine="true"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:textColorHint="@color/text_color"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:gravity="center_vertical"
                        android:hint="@string/username"


                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:background="@drawable/edt_sign_bg"

                >
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:src="@drawable/password_icon"
                    android:padding="8dp"
                    />
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorPrimary"
                    app:hintAnimationEnabled="false"
                    app:counterEnabled="false"
                    app:errorEnabled="false"


                    >
                    <EditText
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/edt_sign_bg"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:textColorHint="@color/text_color"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:gravity="center_vertical"
                        android:hint="@string/password"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <TextView
                android:id="@+id/tv_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:text="@string/forget_password"
                />
            <Button
                android:id="@+id/btn_signin"
                android:layout_width="200dp"
                android:layout_height="37dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:text="@string/sign_in"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:background="@drawable/btn_bg"
                />
            <Button
                android:id="@+id/btn_client_signup"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:textColor="@color/btn_bg_color"
                android:textSize="17sp"
                android:text="@string/member_sign_up"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:background="@drawable/btn_sign_up_bg"
                />
            <Button
                android:id="@+id/btn_nursery_signup"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:textColor="@color/btn_bg_color"
                android:textSize="17sp"
                android:text="@string/nursery_sign_up"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:background="@drawable/btn_sign_up_bg"
                />
            <TextView
                android:id="@+id/tv_skip"
                android:layout_width="200dp"
                android:layout_height="37dp"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/skip"
                android:background="@drawable/btn_bg"
                android:textStyle="bold"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:gravity="center"

                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>