<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.forget_password.ForgetPasswordActivity">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/toolbar_bg"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >
            <ImageView
                android:id="@+id/image_back"
                android:layout_width="56dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                tools:ignore="RtlCompat"
                android:src="@drawable/back_arrow"
                android:padding="17dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:text="@string/recover_password"
                android:textStyle="bold"
                />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:fitsSystemWindows="true"
        android:fillViewport="true"
        android:background="@drawable/home_bg"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            >

            <ImageView
                android:layout_width="200dp"
                android:layout_height="170dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:src="@drawable/logo"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                android:textStyle="bold"
                android:text="@string/recov_msg"

                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:background="@drawable/edt_forgetpassword_bg"

                >
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/user_icon"
                    android:padding="8dp"
                    />
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="false"
                    app:passwordToggleTint="@color/colorPrimary"
                    app:hintAnimationEnabled="false"
                    app:counterEnabled="false"
                    app:errorEnabled="false"


                    >
                    <EditText
                        android:id="@+id/edt_username"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/edt_forgetpassword_bg"
                        android:inputType="text"
                        android:singleLine="true"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:textColorHint="@color/text_color"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:gravity="center_vertical"
                        android:hint="@string/username"


                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:background="@drawable/edt_forgetpassword_bg"

                >
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/email_icon"
                    android:padding="8dp"
                    />
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="false"
                    app:passwordToggleTint="@color/colorPrimary"
                    app:hintAnimationEnabled="false"
                    app:counterEnabled="false"
                    app:errorEnabled="false"


                    >
                    <EditText
                        android:id="@+id/edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/edt_forgetpassword_bg"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:textColorHint="@color/text_color"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:gravity="center_vertical"
                        android:hint="@string/email_address"


                        />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_send"
                android:layout_width="200dp"
                android:layout_height="37dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:text="@string/send"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:background="@drawable/btn_bg"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>